# news-crawler

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/news_crawler/: __init__.py  api.py  main.py  run_api.py
src/news_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/news_crawler/core/: config.py  database.py  exceptions.py
src/news_crawler/models/: article.py
src/news_crawler/services/: crawler.py  repository.py  rss_checker.py  translator.py
